src/App.scss
// Max screen sizes variables
$screen-xs-max: 768px; // < 768 (xsmall phones)
$screen-sm-max: 992px; // < 992px (small tablet)
$screen-md-max: 1200px; // < 1200 px (large desktops

// Mix screen sizes variables
$screen-xs-min: 768px; // < 768 (xsmall phones)
$screen-sm-min: 992px; // < 992px (small tablet)
$screen-md-min: 1200px; // < 1200 px (large desktops

/* Global Styles */
:root {
  --primary-color: #1471eb;
  --secondary-color: #abd1fc;
  --light-color: #f5f5f5;
  --dark-color: rgb(41, 41, 41);
}

.color-primary {
  color: var(--primary-color);
}

.color-secondary {
  color: var(--secondary-color);
}

.color-light {
  color: var(--light-color);
}

h1 {
  font-family: "Muli", sans-serif;
}

.App {
  text-align: center;
  align-content: center;
  display: flex;
  flex-direction: column;
  background-color: var(--light-color);
  width: 100%;
}

.section1 {
  // Mobile first
  display: flex;
  flex-direction: column-reverse;
  // min-height: 100vh;
  margin-top: 5%;
  margin-bottom: 5%;
  background-color: var(--light-color);
  // For the smallest non mobile device (non-mobile after)
  @media (min-width: $screen-sm-min) {
    align-items: center;
    justify-content: center;
    flex-direction: row;
  }
}

.leftSection1 {
  //mobile
  height: 50%;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 3%;
  width: auto;
  > .phone-frames > .android-phone {
    display: none;
  }
  //Desktop
  @media (min-width: $screen-sm-min) {
    width: 40%;
    display: flex;
    > .phone-frames > .android-phone {
      display: initial;
    }
  }
}

.rightSection1Box > button:hover {
  background-color: var(--secondary-color);
  cursor: pointer;
  color: black;
}
.rightSection1Box {
  text-align: center;
  width: 100%;
  margin-top: 3%;
  @media (min-width: $screen-sm-min) {
    width: 35%;
    height: 100%;
    margin-top: 0%;
    > {
      h1 {
        font-size: 100px;
        line-height: 0;
      }

      h2 {
        font-size: 40px;
      }

      p {
        font-size: 20px;
      }
    }
  }
}

.section2 {
  display: flex;
  flex-direction: column;
  height: auto;
  background-color: var(--primary-color);
  padding-top: 10%;
  padding-bottom: 10%;
  @media (min-width: $screen-sm-min) {
    flex-direction: row;
    height: 700px;
    padding-top: 0%;
    padding-bottom: 0%;
  }
}

.innerSectionBox {
  height: 50%;
  width: 100%;
  margin: 0 auto;
  margin-top: 5%;
  margin-bottom: 5%;
  > img {
    width: 20%;
    margin: 0 auto;
  }
  @media (min-width: $screen-sm-min) {
    width: 30%;
    > img {
      height: 30%;
      width: auto;
      margin: 0 auto;
    }
  }
}

.section2-list {
  font-family: "Muli", sans-serif;
  color: var(--light-color);
  list-style: none;
  margin: 2%;
  padding: 0;
  margin: 0 auto;
  margin-top: 20px;
  width: 65%;
  @media (min-width: $screen-sm-min) {
    font-size: 20px;
    width: 80%;
    text-align: left;
  }
}

.section2-list > li {
  text-align: center;
  margin-top: 2%;
  margin-bottom: 2%;
}

.section3 {
  display: flex;
  align-items: center;
  background-color: var(--dark-color);
  @media (min-width: $screen-sm-min) {
    height: 700px;
    max-height: 80vh;
    padding-top: 1.3%;
    padding-bottom: 1%;
    flex-direction: row;
    padding-bottom: 0%;
  }
}

.rightSection3 {
  width: 100%;
  margin: 1% auto auto auto;
  justify-content: space-between;
  @media (min-width: $screen-sm-min) {
    height: 60%;
    text-align: left;
    margin-top: 4%;
  }

  > h2 {
    font-size: 40px;
    color: white;
    cursor: pointer;
  }
}

.section4 {
  max-height: 10vh;

  > {
    h1 {
      font-size: 50px;
      margin-top: 8%;
    }

    form {
      width: 60%;
      margin: 0 auto;
      height: 50%;

      > textarea {
        width: 99%;
        height: 50%;
        margin-top: 10px;
        font-size: 16px;
      }
    }
  }
}

.section4 > form > button {
  width: 50%;
  margin: 0 auto;
  padding: 10px;
  border: none;
  background-color: var(--primary-color);
  color: white;
  font-size: 18px;
  border-radius: 5px;
  margin-top: 20px;

  &:hover {
    background-color: var(--primary-color);
    cursor: pointer;
  }
}

.step-header {
  font-family: "Muli", sans-serif;
  font-size: 20px;

  cursor: pointer;

  @media (min-width: $screen-sm-min) {
    font-weight: 300;
  }
}

// Not main section scss
li {
  padding-bottom: 2.5%;
}

.phone-frames {
  height: 70%;
  display: flex;
  justify-content: flex-end;
  @media (min-width: $screen-sm-min) {
    width: 70%;
  }
}

.iphone {
  margin-left: 2%;
}

.phoneframe2 {
  width: 100%;
  > img {
    height: 500px;
  }
  @media (min-width: $screen-sm-min) {
    > img {
      margin-top: 10%;
      float: right;
    }
  }
}

.ul-title {
  font-size: 35px;
  font-family: "Muli", sans-serif;
  color: var(--light-color);
  text-decoration: underline;
  @media (min-width: $screen-sm-min) {
    font-size: 55px;
  }
}

.formTop {
  display: inline;

  > input {
    width: 48%;
    height: 25px;
    padding: 5px;
    font-size: 16px;
  }
}

.input1 {
  float: left;
}

.input2 {
  float: right;
}

.stores {
  width: 80%;
  > img {
    height: 40px;
    margin: 3%;
  }
  @media (min-width: $screen-sm-min) {
    display: inline-flex;
    width: 70%;
    justify-content: space-around;

    > img {
      height: 50px;
      margin-top: 1%;
    }
  }
}

.headline-h2-section3 {
  font-family: "Muli", sans-serif;
  color: var(--light-color);
  align-self: center;
  margin: 0;
  padding-top: 10%;
  font-size: 30px;
  @media (min-width: $screen-sm-min) {
    font-size: 65px;
  }
}

.headline-p {
  width: 60%;
  text-align: center;
  margin: 0 auto;
  margin-top: 5%;
  margin-bottom: 5%;
  @media (min-width: $screen-sm-min) {
    font-family: "Montserrat";
    font-size: 38px;
    font-weight: bold;
    width: 90%;
  }
}

.fixed-footer {
  position: fixed;
  bottom: 0;
  text-align: right;
  background-color: var(--secondary-color);
  font-family: "Muli", sans-serif;
  letter-spacing: 0.1em;
  width: 100%;
  padding: 0.7%;
  z-index: 1;

  @media (max-width: $screen-sm-min) {
    font-size: 10px;
  }
}

.footer-link {
  color: black;
  margin-right: 3%;
}

.logo-large {
  width: 300px;
  @media (min-width: $screen-sm-min) {
  }
}

.primary-btn-section1 {
  width: 55%;
  margin: 0 auto;
  max-width: 170px;
  padding: 10px;
  border: none;
  background-color: var(--primary-color);
  color: var(--light-color);
  font-size: 18px;
  font-family: "Muli", sans-serif;
  letter-spacing: 0.1em;
  border-radius: 5px;
  cursor: pointer;
  justify-self: center;

  @media (min-width: $screen-sm-min) {
    width: 200px;
  }
}

.secondary-btn {
  margin: 1%;
  min-width: 150px;
  padding: 10px;
  border-width: 1px;
  border-color: var(--primary-color);
  background-color: var(--light-color);
  color: black;
  font-size: 18px;
  font-family: "Muli", sans-serif;
  letter-spacing: 0.1em;
  border-radius: 5px;
  justify-self: center;
  @media (min-width: $screen-sm-min) {
    width: 25%;
    margin: 0 auto auto 2%;
  }
}

.custom-text-container {
  padding: 2%;
}

.title {
  text-align: center;
  font-size: 36px;
  font-weight: bolder;
}

.subtitle {
  text-align: center;
  font-size: 24px;
  font-weight: bold;
}

.form-group {
  text-align: center;
}

.submit-button {
  width: 10%;
  padding: 1%;
  font-size: 24px;
  border-radius: 8px;
  background-color: var(--secondary-color);
  border: none;
}

.input-label {
  font-size: 18px;
  font-weight: bold;
}

.form-input,
.form-input-small,
.form-textarea {
  width: 20%;
  border: none;
  border-radius: 8px;
  margin: 0.25%;
  padding: 0.5% 0%;
}

.form-input-small {
  font-size: x-small;
}

.form-input,
.form-input-small {
  text-align: center;
}
form {
  text-align: left;
}
@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Muli:wght@600&display=swap");

